--- a/k8s/k8s-backend-post-config.yaml
+++ b/k8s/k8s-backend-post-config.yaml
@@ -6,21 +6,20 @@ data:
   application-dev.yml: |
     server:
       port: 8080
-
+    
     spring:
       datasource:
-        url: jdbc:mysql://k8s-backend-post-jdbc-service:3306/post?serverTimezone=UTC&useSSL=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://k8s-external-post-mysqlservice:3306/post?serverTimezone=UTC&useSSL=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
         driver-class-name: com.mysql.cj.jdbc.Driver
         hikari:
           connection-test-query: SELECT 1 # HikariCP 유효성 검사 추가
           validation-timeout: 5000
-
-      jpa:
-        hibernate:
-          ddl-auto: create # 오직 테스트 환경에서만
-        generate-ddl: true # 오직 테스트 환경에서만
-        show-sql: true
-        open-in-view: false
-
+    jpa:
+      hibernate:
+        ddl-auto: create # 오직 테스트 환경에서만
+      generate-ddl: true # 오직 테스트 환경에서만 (spring.jpa.generate-ddl)
+      show-sql: true
+      open-in-view: false
+    
     kafka:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: k8s-external-kafka-service:9092
