--- a/k8s/k8s-backend-post-deploy.yaml
+++ b/k8s/k8s-backend-post-deploy.yaml
@@ -3,22 +3,19 @@ kind: Deployment
 metadata:
   name: k8s-backend-post-deployment
 spec:
-  replicas: 1
+  replicas: 3  # 원하는 파드 복제본 수 (기본값: 1)
   selector:
     matchLabels:
-      app: k8s-backend-post
+      app: k8s-backend-post  # 템플릿의 labels와 일치해야 함
   template:
     metadata:
       labels:
-        app: k8s-backend-post
+        app: k8s-backend-post  # selector와 일치해야 함
     spec:
       containers:
         - name: k8s-backend-post
           image: eomtaebeom/k8s-backend-post:0.0.1
           imagePullPolicy: Always
-          env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: dev
           ports:
             - containerPort: 8080
           livenessProbe:
@@ -39,14 +36,12 @@ spec:
             periodSeconds: 5          # 5초마다 체크
             failureThreshold: 3       # 3회 연속 실패 시 서비스 트래픽 중지
             timeoutSeconds: 3         # 3초 내 응답 필요
-
           volumeMounts:
-            - name: backend-post-config-volume
-              mountPath: /etc/config
-              readOnly: true
-            - name: backend-post-secret-volume
-              mountPath: /etc/secret
-              readOnly: true
+            - mountPath: /etc/config
+              name: backend-post-config-volume
+            - mountPath: /etc/secret
+              name: backend-post-secret-volume
+
       volumes:
         - name: backend-post-config-volume
           configMap:
