--- a/k8s/k8s-backend-post-jdbc-service.yaml
+++ b/k8s/k8s-backend-post-jdbc-service.yaml
@@ -1,10 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-name: k8s-backend-post-service
+  name: k8s-backend-post-jdbc-service
 spec:
-ports:
-  - port: 8080
-targetPort: 8080
-selector:
-app: k8s-backend-post
+  ports:
+    - port: 3306
+
+---
+
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: k8s-backend-post-jdbc-service
+subsets:
+  - addresses:
+      - ip: 192.168.0.135
+    ports:
+      - port: 13307
