--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,38 @@
-spring:
-  application:
-    name: k8s-backend-post
+server:
+  port: 8080
 
-kafka:
-  listener:
-    ack-mode: manual_immediate
-  consumer:
-    group-id: ${spring.application.name}
-    key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-    enable-auto-commit: false
-    auto-offset-reset: latest
-    max-poll-records: 10
-    properties:
-      spring.json.trusted.packages: "*"
-      spring.json.use.type.headers: false  # 헤더의 타입 정보 무시
-  producer:
-    key-serializer: org.apache.kafka.common.serialization.StringSerializer
-    value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    properties:
-      spring.json.add.type.headers: false  # 타입 헤더 추가 비활성화
+spring:
+  datasource:
+    url: jdbc:mysql://k8s-external-post-mysql-service:3306/post?serverTimezone=UTC&useSSL=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+    username: post_user
+    password: post_password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      connection-test-query: SELECT 1
+      validation-timeout: 5000
+  jpa:
+    hibernate:
+      ddl-auto: update    # 운영환경에는 update 또는 none 추천, 테스트 환경이면 create
+    generate-ddl: true
+    show-sql: true
+    open-in-view: false
+
+  kafka:
+    bootstrap-servers: k8s-external-kafka-service:9092
+    listener:
+      ack-mode: manual_immediate
+    consumer:
+      group-id: ${spring.application.name}
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      enable-auto-commit: false
+      auto-offset-reset: latest
+      max-poll-records: 10
+      properties:
+        spring.json.trusted.packages: "*"
+        spring.json.use.type.headers: false
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
